--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,13 @@
 # Preface {.unnumbered}
 
-This is a Quarto book.
+Indigenous people are the original stewards of the coast and seas of the Pacific Coast region. They maintain a font of knowledge that is essential in understanding the state of coastal ecosystems and their fate in a changing climate. This resource seeks to honor that legacy by collecting different accounts, studies, and programs that promote Indigenous perspectives in coastal ecosystem stewardship. It seeks to both explore existing examples where Indigenous communities are managing resources in tandem with settler governments (or “co-management”) as well as issues related to food sovereignty with respect to both wild harvest and cultivated foods. While focused on multiple regions of the Pacific Coast, the resource will highlight resources with particular relevance to California. 
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
+Co-management is becoming a reality across fisheries, aquaculture operations, and protected area management throughout the Pacific Coast. Government-to-government relationships have been strengthened in several regions with Native people (re)gaining decision making power in some cases. There are several formalized examples of this in Washington and Canada, with other important lessons from regions with strong Indigenous fishing, aquaculture, and coastal stewardship practices like Alaska and Hawai’i. California, while behind other states, is beginning to explore this model in the governance of the state’s marine protected area (MPA) network.
+ 
+There are many pathways towards restoring the ancestral responsibilities of coastal Indigenous people, and co-management is not always the preferred outcome. The government-to-government agreement does not fit cases where Indigenous groups do not have federal tribal recognition in the United States. The second section of this guide is dedicated to food sovereignty, seen as an essential component of cultural connectivity and self-determination for Indigenous people around the world. This guide explores perspectives on food sovereignty through both wild harvest of marine resources as well as long-practiced aquaculture methods throughout the region.
 
-```{r}
-1 + 1
-```
+The guide concludes with a review of existing partnerships across Indigenous communities that sometimes include collaboration with non-Indigenous entities. These collaborative efforts are becoming more visible and providing opportunities to pursue research and policy that incorporate both Western and Indigenous ways of knowing. 
 
-Test Text for Book
+*Conner Smith, the primary author of this resource, is a white settler residing in unceded Chumash lands. He hails from unceded lands of the Catawba, Sugaree, and Waxhaw in what is now North Carolina. Inspiration for this project was drawn from the work of Phoebe Racine on cataloging resources pertaining to [Indigenous data sovereignty](https://indigenous-data-envs-2022.netlify.app/data-management-tools.html) *
+
+*This book was created using [Quarto](https://quarto.org/docs/books).*
